# housing-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: __init__.py  brisbane_first_home.yaml  default.yaml  melbourne_apartment.yaml  melbourne_house.yaml  rate_drop_scenario.yaml  rate_rise_scenario.yaml  sydney_apartment.yaml
dashboard/: app.py  charts.py  compare_charts.py  compare_tab.py  formatters.py  mc_charts.py  sidebar.py
docs/: liquidated_net_worth.md  lmi_estimation.md  mc_distributions.md  preset_research.md
housing/: cli.py  config.py  lmi.py  mc_params.py  model.py  monte_carlo.py  output.py  params.py  sensitivity.py  tax.py
tests/: test_model.py  test_monte_carlo.py  test_tax.py
