[project]
name = "housing-model"
version = "0.1.0"
description = "Australian housing expense model for net worth optimization"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dashboard = ["streamlit>=1.38", "plotly>=5.18", "pyyaml>=6.0", "numpy>=1.26"]

[tool.setuptools.packages.find]
include = ["housing*", "dashboard*"]

[project.scripts]
housing = "housing.cli:main"
